--- a/styles.css
+++ b/styles.css
@@ -107,9 +107,13 @@ body {
     grid-column-end: 5;
     grid-row-start: 2;
     grid-row-end: 3;
-    /* border: 2px dotted black; */
+    /* border: 1px dotted black; */
     width: 100%;
     height: 100%;
+    /* padding-left: 100px; */
+    /* padding-right: 100px; */
+    /* margin-left: 100px; */
+    /* margin: 100px; */
 }
 
 
@@ -239,4 +243,34 @@ body {
     height: 100%;
     padding: 0%;
     margin: 0%;
+}
+
+/* #about-section{
+    display: grid;
+    flex-direction: column
+} */
+#about-section h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+    font-size: 66px;
+    color: var(--deepest-color);
+    text-align: center;
+    justify-content: flex-end;
+    border-top: 0.1px solid black;
+}
+
+
+.about-img{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
+
+.scroll-about-pages{
+
+}
+
+.scroll-per-page{
+
 }
