--- a/styles.css
+++ b/styles.css
@@ -245,10 +245,12 @@ body {
     margin: 0%;
 }
 
-/* #about-section{
-    display: grid;
-    flex-direction: column
-} */
+.about-me{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+}
 #about-section h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: lighter;
@@ -265,12 +267,56 @@ body {
     flex-direction: row;
     width: 100%;
     height: 100%;
-}
-
-.scroll-about-pages{
+    /* border: 1px solid var(--deepest-color); */
 
 }
 
-.scroll-per-page{
+.about-text{
+    /* border: 1px solid var(--deepest-color); */
+    display: inherit;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+}
 
+.about-heading{
+    font-size: 100px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+}
+
+.about-summary{
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: normal;
+    text-align: center;
+    padding-left: 50px;
+}
+
+#resources-section h2 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+    font-size: 66px;
+    color: var(--deepest-color);
+    text-align: center;
+    justify-content: flex-end;
+    border-top: 0.1px solid black;
+}
+
+#resources-body{
+    display: flex;
+    flex-direction: row;
+}
+#help-list{
+    border: 1px solid var(--deepest-color);
+    padding-left: 50px;
+}
+
+#help-list span{
+    font-size: 40px;
+}
+
+#help-animation{
+    border: 1px solid var(--deepest-color);
 }
