--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
     --deepest-color: #5c8d89;
 }
 
+@keyframes help {
+    0%   {background-color: red;}
+    25%  {background-color: yellow;}
+    50%  {background-color: blue;}
+    100% {background-color: red;}
+  }
+
 html {
     box-sizing: border-box;
 }
@@ -304,19 +311,97 @@ body {
     border-top: 0.1px solid black;
 }
 
-#resources-body{
+#resource-body{
     display: flex;
     flex-direction: row;
 }
 #help-list{
-    border: 1px solid var(--deepest-color);
+    /* border: 1px solid var(--deepest-color); */
+    display: flex;
+    flex-direction: column;
     padding-left: 50px;
+    width: 50%;
+    align-items: center;
 }
 
 #help-list span{
-    font-size: 40px;
+    font-size: 50px;
+}
+
+#help-list ul{
+    font-size: 30px;
 }
 
 #help-animation{
     border: 1px solid var(--deepest-color);
+    font-size: 200px;
+    margin: auto;
+    background-color: var(--deep-color);
+    animation-name: help;
+    animation-duration: 4s;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    animation-delay: 1s;
+}
+
+#contact-section{
+    /* border: 1px solid var(--deepest-color); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    /* border-top: 0.1px solid black; */
+    align-content: space-between;
+}
+
+#contact-heading{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+    font-size: 66px;
+    color: var(--deepest-color);
+    text-align: center;
+    justify-content: flex-end;
+    /* border-top: 0.1px solid black;    */
+}
+
+#contact-subheading{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: lighter;
+    font-size: 22px;
+    color: var(--deepest-color);
+    text-align: center;
+    justify-content: flex-end;
+}
+
+#contact-name{
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+}
+
+#contact-email{
+    padding-bottom: 40px;
+}
+
+.form-inputs{
+    padding: 20px;
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    font-style: normal;
+}
+
+#footer{
+    width: calc(100vw - 100px);
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    border: 1px solid var(--deepest-color);
+    background-color: var(--deeper-color);
+    text-align: center;
+    align-items: center;
+    padding: 10px;
+    align-content: space-between;
+    font-size: 20px;
 }
